# openshift-demos-ansible-ee

./: .gitignore  CHANGELOG.md  Makefile  README.adoc  execution-environment.yml  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: build-and-release.yml  ci.yml
context/: Dockerfile
context/_build/: requirements.yml  requirements_combined.txt
