[tool.poetry]
name = "openshift-demos-ansible-ee"
version = "0.0.1"
description = "Ansible Runner for setting up OpenShift Demo Env"
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
ansible-builder = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
